tooling/nargo_cli/tests/snapshots/execution_success/slice_loop/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "points",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Point",
            "fields": [
              {
                "name": "x",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "y",
                "type": {
                  "kind": "field"
                }
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62SMQ7CMAxFE9pwHju2G3vjKgTc+x8BIjIgGDrUT7L+YOkNXz+nD+V9Of1znXmbCefASFcOdF0CXUugaw10lS8XwcbsrToS3qFaVwGWvikqisqzKpEra7NuDQyZHHcx8n3gj9H9+rORNDc0ulzmv6RjXrAPYa6EAgAA",
  "debug_symbols": "pZFBCoMwEEXvMmsXaaI09SqlSIyjBEISYlIo4t0bJba6EApdTWZ+3h+YP0GHbRwaZXo7Qn2foPVKazU02koRlDVpOs0FbG0TPGIawU5PlBMeTYDaRK0LeAod10+jE2atQfikkgLQdKkmw15pXF5z8aXJOcpKmmFW8g9e/cxzUmWe0+sZT895SnnmKbv9t59dDvwjdUIqf7g4EKjLebHzSrQacwp9NHIXSni5Tdlic95K7KLHxW7V0oI3",
  "file_map": {
    "50": {
      "source": "struct Point {\n    x: Field,\n    y: Field,\n}\n\nimpl Point {\n    fn serialize(self) -> [Field; 2] {\n        [self.x, self.y]\n    }\n}\n\nfn sum(values: [Field]) -> Field {\n    let mut sum = 0;\n    for value in values {\n        sum = sum + value;\n    }\n    sum\n}\n\nfn main(points: [Point; 3]) {\n    let mut serialized_points = &[];\n    for point in points {\n        serialized_points = serialized_points.append(point.serialize().as_slice());\n    }\n    // Do a compile-time check that needs the previous loop to be unrolled\n    if serialized_points.len() > 5 {\n        let empty_point = Point { x: 0, y: 0 };\n        serialized_points = serialized_points.append(empty_point.serialize().as_slice());\n    }\n    // Do a sum that needs both the previous loop and the previous if to have been simplified\n    assert_eq(sum(serialized_points), 21);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
